--- a/digito-ui/package.json
+++ b/digito-ui/package.json
@@ -7,6 +7,7 @@
     "braces": "^2.3.2",
     "catenary-curve": "^1.0.1",
     "duration-js": "^4.0.0",
+    "handlebars": "^4.1.2",
     "lazy-brush": "^1.0.1",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
@@ -23,6 +24,7 @@
     "superagent": "^4.1.0",
     "superagent-prefix": "^0.0.2",
     "superagent-suffix": "^0.1.0",
+    "tar": "^4.4.8",
     "typechecker": "^4.7.0"
   },
   "devDependencies": {
