--- a/digito-api/requirements.txt
+++ b/digito-api/requirements.txt
@@ -1,6 +1,6 @@
 absl-py==0.9.0
 astor==0.8.1
-Click==7.1.1
+click==7.1.1
 cycler==0.10.0
 decorator==4.4.2
 Flask==1.1.2
@@ -23,7 +23,7 @@ networkx==2.4
 numpy==1.18.3
 opencv-python==4.2.0.34
 opt-einsum==3.2.1
-Pillow==6.2.2
+Pillow==7.1.0
 protobuf==3.11.3
 pyparsing==2.4.7
 python-dateutil==2.8.1
@@ -31,7 +31,7 @@ python-dotenv==0.13.0
 PyWavelets==1.1.1
 PyYAML==5.3.1
 scikit-image==0.16.2
-scipy==1.4.1
+scipy==1.5.2
 six==1.14.0
 tensorboard==1.15.0
 tensorflow==1.15.2
